<resources>
    <string name="app_name">CS5520_InClass_Yijing8138</string>
    <string name="name_button_practice">Practice</string>
    <string name="name_button_log">Log</string>
    <string name="name_button_toast">toast</string>
    <string name="InClass01_button">InClass01</string>
    <string name="BMItitle">Body Mass Index (BMI)</string>
    <string name="weight">weight</string>
    <string name="weightHint">Your weight in pounds </string>
    <string name="lb">lb</string>
    <string name="height">height</string>
    <string name="heightHint_feet">feet</string>
    <string name="heightHint_inches">inches</string>
    <string name="feet">feet</string>
    <string name="inches">inches</string>
    <string name="calculateButton">Calculate BMI</string>
    <string name="InClass02">InClass02</string>
    <string name="Name">Name</string>
    <string name="Email">Email</string>
    <string name="Iuse">I use</string>
    <string name="Android">Android</string>
    <string name="iOS">iOS</string>
    <string name="submit">submit</string>
    <string name="select_your_avatar">Select your avatar</string>
    <string name="moodText">You current mood:</string>
    <string name="moodDefault">Happy</string>
    <string name="Angry">Angry</string>
    <string name="Sad">Sad</string>
    <string name="Awesome">Awesome</string>
    <string name="sign">!</string>
    <string name="Iam">I am</string>
    <string name="quit">Quit this activity</string>
    <string name="InClass03">InClass03</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="InClass04">InClass04</string>
    <string name="SelectComplexity">Select Complexity:</string>
    <string name="SelectComplexityDefault">8 times</string>
    <string name="Maximum">Maximum:</string>
    <string name="Minimum">Minimum:</string>
    <string name="Average">Average:</string>
    <string name="GeneralteNumber">Generalte Number</string>
    <string name="InClass05">InClass05</string>
    <string name="buttonGo">GO</string>
    <string name="SearchKeyword">Search Keyword</string>
    <string name="loading">Loading...</string>
    <string name="InClass06">InClass06</string>
    <string name="country">Please input your country here</string>
    <string name="Title">Title:</string>
    <string name="Author">Author:</string>
    <string name="PublishTime">Publish Time:</string>
    <string name="Description">Description:</string>
    <string name="Next">Next</string>
    <string name="previous">Previous</string>
    <string name="categoryHint">Please choose one of below:</string>
    <string name="ImageNotFound">Image Not Found!</string>
    <string name="InCLass07">InCLass07</string>
    <string name="Password">Password</string>
    <string name="Register">Register</string>
    <string name="registerOrLoginHint">Please click button to register or login:</string>
    <string name="Login">Login</string>
    <string name="cancel">cancel</string>
    <string name="ID">ID</string>
    <string name="Logout">Log Out</string>
    <string name="Note">Note </string>
    <string name="Delete">Delete</string>
    <string name="NoNote">There is no note, please post a new note!</string>
    <string name="NoteHint">Write anything as note...</string>
    <string name="Post">Post</string>
    <string name="InCLass08">InCLass08 and InClass09</string>
    <string name="GoToRegisterHint">Don\'t have account? Click here to register.</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="GoToLoginHint">Already have account? Click here to login.</string>
    <string name="AddNewFriend">Add New Friend</string>
    <string name="EnterYourFriendEmail">Your Friend\'s Email</string>
    <string name="Chat">Chat</string>
    <string name="NewFriendUserName">New Friend\'s UserName</string>
    <string name="UserName">UserName</string>
    <string name="BackToMainPage">Back To Main Page</string>
    <string name="Welcome">Welcome, </string>
    <string name="GetPhotoFromGallery">Get Photo From Gallery</string>
    <string name="TakePhotoWithCamera">Take Photo With Camera</string>
    <string name="InputNewName">Input a new name:</string>
    <string name="SubmitNewName">Submit New Name</string>
    <string name="SendImage">Send Image</string>
    />
</resources>